# qss-solver

./: .clang-format  .gitignore  .gitmodules  CHANGELOG  INSTALL  MMOCompiler.doxyfile  Makefile  QSSSolver.doxyfile  QSSSolverGUI.doxyfile  README.md  biorica_writer.cpp  biorica_writer.h  codeeditor.cpp  codeeditor.h  comboboxdelegate.cpp  comboboxdelegate.h  convert.cpp  editor.h  file.mo  gitchangelog.py  gitchangelog.rc.reference  gui.makefile  main.cpp  mainpage.dox  math.mo  mmo_assignment.cpp  mmo_assignment.h  mmo_convert.cpp  mmo_convert.h  mmo_decl.cpp  mmo_decl.h  mmo_equation.cpp  mmo_equation.h  mmo_event.cpp  mmo_event.h  mmo_exp.h  mmo_function.cpp  mmo_function.h  mmo_math.cpp  mmo_math.h  (+34 more)
.hooks/: README.md  (+1 more)
dependency/: Makefile.in  configure.in  graph_definition.h
dependency/ast/: ast_types.h  class.cpp  class.h  element.cpp  element.h  equation.cpp  equation.h  expression.cpp  expression.h  modification.cpp  modification.h  queries.h  statement.cpp  statement.h
dependency/builders/: sd_graph_builder.cpp
dependency/mmo/: Makefile.include  main.cpp  mmo_class.cpp  mmo_class.h  mmo_tree.cpp  mmo_tree.h
dependency/parser/: class.cpp  class.h  class_def.h  equation.cpp  equation.h  equation_def.h  expression.cpp  expression.h  expression_def.h  ident.cpp  ident.h  ident_def.h  modification.cpp  modification.h  modification_def.h  parser.cpp  parser.h  skipper.h  statement.cpp  statement.h  statement_def.h
dependency/util/: debug.cpp  debug.h  derivate.cpp  derivate.h  derivate_equality.cpp  derivate_equality.h  table.cpp  table.h  type.cpp  type.h
(+1606 files in other folders)
